# python-project-template-2024

./: .editorconfig  LICENSE  README.md  biome.jsonc  mkdocs.yml  mkdocs.yml.orig  pyproject.toml  replace_project_name.sh  requirements.txt  requirements_dev.txt  requirements_docs.txt  template.env
.github/: dependabot.yml
.github/workflows/: apply-pip-compile.yml  apply-ruff.yml  apply-styles.yml  auto-release.yml  check-docs.yml  check-pip-compile.yml  deploy-mkdocs-on-latest.yml  deploy.yml  docs.yml  gen-init-py.yml  lint.yml  styles-only-changed.yml  styles.yml  tests.yml  type-checking.yml
docs/: CHANGELOG.md  mkdocstrings.md
docs/git/: format_code.md  git_commit.md  github.md  release_version.md
docs/mkdocs/: admonitions.md  api_reference.md  gitlab_pages.md  mkdocs.md  mkdocstrings.md
docs/python/: configuration.md  logging.md  publish_to_pypi.md  versioneer.md
docs/python_tools/: formatters.md  linter.md  lsp.md  other_vscode_extensions.md  publish_to_pypi.md  todo_highlights.md
scripts/: compile_requirements.sh  gen_init_py.py  get_python_version.py  health.py  install_binaries.sh  replace_project_name.sh  run_doctest.py
src/ml_project/: __init__.py  _version.py  template.env  two_numbers.py
src/ml_project/cli/: docstring.py  main.py
src/ml_project/health/: __init__.py
src/ml_project/utils/: config.py  deferred_logger.py  log.py
src/mlproject/: __init__.py  _version.py  two_numbers.py
src/mlproject/cli/: main.py
src/mlproject/health/: __init__.py  __main__.py  font.py  slack.py
src/mlproject/utils/: __init__.py  config.py  log.py  rich.py
src/mlproject/utils/slack/: __init__.py  interactive.py  send_only.py
tests/: conftest.py  test_add.py
tools/: color_logging_main.py
tools/examples/: clearml_pipeline.py  color_logging_main.py  slack_interactive.py  slack_send.py
