[build-system]
requires = ["setuptools>=60", "versioneer[toml]==0.29"]
build-backend = "setuptools.build_meta"

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "src/mlproject/_version.py" # CHANGE
versionfile_build = "mlproject/_version.py"      # CHANGE
tag_prefix = "v"
parentdir_prefix = "mlproject-"                  # CHANGE

[project]
name = "mlproject" # CHANGE
dynamic = ["version"]
description = "Innerverz Python project template" # OPTIONALLY CHANGE
authors = [
  { name = "Kiyoon Kim" }, # OPTIONALLY CHANGE
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
keywords = ["development", "template", "innerverz"]
dependencies = [
  "rich >= 13.6.0",
  # ADD MORE LATER (torch, torchvision, ...)
]

[project.optional-dependencies]
dev = ["black >= 23.9.0"]
test = ["pytest >= 7.4.0", "pytest-cov >= 4.1.0"]

[project.urls]
"Homepage" = "https://github.com/innerverz-ai/python-project-template-2023" # OPTIONALLY CHANGE

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--cov=mlproject" # CHANGE (name of the importing module name)
testpaths = ["tests"]

[tool.ruff]
src = ["src"]  # for ruff isort
extend-exclude = [
  "src/mlproject/_version.py",  # CHANGE
]

[tool.ruff.lint]
# OPTIONALLY ADD MORE LATER
select = [
  # flake8
  "E",
  "F",
  "W",
  "B",    # Bugbear
  "D",    # Docstring
  "D213", # Multi-line docstring summary should start at the second line (replace D212)
  "N",    # Naming
  "C4",   # flake8-comprehensions
  "UP",   # pyupgrade
  "SIM",  # simplify
  "RUF",  # ruff-specific
  "RET",  # return
  "PTH",  # path
  "NPY",  # numpy
  "PYI",  # type stubs for pyright/pylance
  "PT",   # pytest

  # Not important
  "T10",  # debug statements
  "T20",  # print statements
]

ignore = [
  "E402",    # Module level import not at top of file
  "D10",     # Missing docstring in public module / function / etc.
  "D200",    # One-line docstring should fit on one line with quotes
  "D212",    # Multi-line docstring summary should start at the first line
  "D417",    # require documentation for every function parameter.
  "D401",    # require an imperative mood for all docstrings.
  "PTH123",  # Path.open should be used instead of built-in open
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pycodestyle]
# Black or ruff will enforce line length to be 88, except for docstrings and comments.
# We set it to 120 so we have more space for docstrings and comments.
max-line-length = 120

[tool.ruff.lint.isort]
# combine-as-imports = true
known-third-party = ["wandb"]

## Uncomment this if you want to use Python < 3.10
# required-imports = [
#   "from __future__ import annotations",
# ]

[tool.pyright]
include = ["src"]

typeCheckingMode = "standard"
autoSearchPaths = true
useLibraryCodeForTypes = true
autoImportCompletions = true
diagnosticsMode = "openFilesOnly"

reportUnusedImports = false
reportUnusedVariable = false
# reportUnusedClass = "warning"
# reportUnusedFunction = "warning"
reportUndefinedVariable = false  # ruff handles this with F821

pythonVersion = "3.10"
pythonPlatform = "Linux"

[tool.coverage.report]
omit = [
  "src/mlproject/_version.py", # CHANGE
  # OPTIONALLY ADD MORE LATER
]
